primitives/runtime-interface/tests/ui/pass_by_enum_with_value_variant.stderr
error: `PassByEnum` only supports unit variants.
 --> $DIR/pass_by_enum_with_value_variant.rs:3:10
  |
3 | #[derive(PassByEnum)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
